<?xml version="1.0"?>
<package format="3">
  <name>planning</name>
  <version>1.0.0</version>
  <description>Global path planner — A* + 재계획 (Ground Autonomy Framework)</description>
  <maintainer email="user@example.com">Yun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>amr_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
